salesforce_sfdx/main/default/objects/Additional_Information__c/Additional_Information__c.object-meta.xml
<CustomObject>
    <label>Additional Information</label>
    <nameField>
        <displayFormat>AI-{00000}</displayFormat>
        <label>Additional Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>