salesforce_sfdx/main/default/objects/Additional_Information__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>Expiration_Date__c &gt;  TODAY()</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>