salesforce_sfdx/main/default/objects/Additional_Information__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>