salesforce_sfdx/main/default/objects/Additional_Information__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>MemberPlan</referenceTo>
    <relationshipLabel>Additional Information</relationshipLabel>
    <relationshipName>Additional_Information</relationshipName>
    <type>Lookup</type>
</CustomField>