salesforce_sfdx/main/default/objects/Additional_Information__c/fields/isActiveAlert__c.field-meta.xml
<CustomField>
    <fullName>isActiveAlert__c</fullName>
    <formula>AND(RecordType.DeveloperName=&quot;Alerts&quot;,NOT(ISPICKVAL(Type__c,&quot;Authorized Rep&quot;))||NOT(ISPICKVAL(Type__c,&quot;Authorized Person (FEP)&quot;)),Active__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isActiveAlert</label>
    <type>Checkbox</type>
</CustomField>