salesforce_sfdx/main/default/objects/Additional_Information__c/fields/isActiveComment_Remark__c.field-meta.xml
<CustomField>
    <fullName>isActiveComment_Remark__c</fullName>
    <formula>AND(RecordType.DeveloperName="Comments_Remarks",Active__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isActiveComment/Remark</label>
    <type>Checkbox</type>
</CustomField>