salesforce_sfdx/main/default/objects/Additional_Information__c/fields/isAuthorized_Representative__c.field-meta.xml
<CustomField>
    <fullName>isAuthorized_Representative__c</fullName>
    <formula>AND(RecordType.DeveloperName=&quot;Alerts&quot;,ISPICKVAL(Type__c,&quot;Authorized Rep&quot;)||ISPICKVAL(Type__c,&quot;Authorized Person (FEP)&quot;),Active__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isAuthorized Representative</label>
    <type>Checkbox</type>
</CustomField>