salesforce_sfdx/main/default/objects/Additional_Information__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Additional Information</relationshipLabel>
    <relationshipName>Additional_Information</relationshipName>
    <type>Lookup</type>
</CustomField>