salesforce_sfdx/main/default/objects/Additional_Information__c/fields/Member_Comment_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Comment_Type__c</fullName>
    <label>Member Comment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASE/PSE only</fullName>
            </value>
            <value>
                <fullName>Authorized Rep</fullName>
            </value>
            <value>
                <fullName>Contact Inform</fullName>
            </value>
            <value>
                <fullName>Disclosure Limitation</fullName>
            </value>
            <value>
                <fullName>Division Alert</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Group Enrollment</fullName>
            </value>
            <value>
                <fullName>Group Withhold</fullName>
            </value>
            <value>
                <fullName>Health Connect</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Member Alert</fullName>
            </value>
            <value>
                <fullName>No referral</fullName>
            </value>
            <value>
                <fullName>Personal Harm</fullName>
            </value>
            <value>
                <fullName>Provider Information</fullName>
            </value>
            <value>
                <fullName>Request New User</fullName>
            </value>
            <value>
                <fullName>RX Authorization</fullName>
            </value>
            <value>
                <fullName>Transfer to Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>