salesforce_sfdx/main/default/objects/Additional_Information__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <label>Sequence Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>