salesforce_sfdx/main/default/objects/Additional_Information__c/fields/Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Date__c</fullName>
    <label>Term Date</label>
    <type>DateTime</type>
</CustomField>