salesforce_sfdx/main/default/objects/Additional_Information__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Group Enrollment</fullName>
            </value>
            <value>
                <fullName>Member Alert</fullName>
            </value>
            <value>
                <fullName>RX Authorization</fullName>
            </value>
            <value>
                <fullName>Authorized Rep</fullName>
            </value>
            <value>
                <fullName>Contact Inform</fullName>
            </value>
            <value>
                <fullName>Division Alert</fullName>
            </value>
            <value>
                <fullName>Disclosure Limitation</fullName>
            </value>
            <value>
                <fullName>Group Withhold</fullName>
            </value>
            <value>
                <fullName>Health Connect</fullName>
            </value>
            <value>
                <fullName>Provider Information</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>ASE/PSE only</fullName>
            </value>
            <value>
                <fullName>Personal Harm</fullName>
            </value>
            <value>
                <fullName>No referral</fullName>
            </value>
            <value>
                <fullName>Transfer to Legal</fullName>
            </value>
            <value>
                <fullName>Request New User</fullName>
            </value>
            <value>
                <fullName>Part C Primary</fullName>
            </value>
            <value>
                <fullName>FEP PERSONAL REPRESENTATIVE</fullName>
            </value>
            <value>
                <fullName>Authorized Person (FEP)</fullName>
            </value>
            <value>
                <fullName>REMARK TYPE/DOCUMENT TYPE</fullName>
            </value>
            <value>
                <fullName>Medpk Adv</fullName>
            </value>
            <value>
                <fullName>ITS*** AEA REMARK TYPE</fullName>
            </value>
            <value>
                <fullName>ITS - REMARK FOR ACTUAL AMBULANCE MILEAGE</fullName>
            </value>
            <value>
                <fullName>AUTHORIZATION REMARK</fullName>
            </value>
            <value>
                <fullName>BILLING REMARK</fullName>
            </value>
            <value>
                <fullName>DISPLAY REMARKS DURING CLAIMS ADJUDICATION</fullName>
            </value>
            <value>
                <fullName>ITS - SPECIAL CONDITION PRICING CONDITION CODE</fullName>
            </value>
            <value>
                <fullName>PRINT REMARKS ON EOB</fullName>
            </value>
            <value>
                <fullName>PRINT REMARKS ON EOB AND EOP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>