salesforce_sfdx/main/default/objects/Additional_Information__c/fields/Type_Patient_Card__c.field-meta.xml
<CustomField>
    <fullName>Type_Patient_Card__c</fullName>
    <description>Adding a formula to bypass a limitation from the Patient Card Configuration</description>
    <formula>TEXT( Type__c )</formula>
    <label>Type Patient Card</label>
    <type>Text</type>
</CustomField>