salesforce_sfdx/main/default/objects/Additional_Information__c/recordTypes/Alerts.recordType-meta.xml
<RecordType>
    <fullName>Alerts</fullName>
    <active>true</active>
    <label>Alerts</label>
</RecordType>