salesforce_sfdx/main/default/objects/Additional_Information__c/recordTypes/Comments_Remarks.recordType-meta.xml
<RecordType>
    <fullName>Comments_Remarks</fullName>
    <active>true</active>
    <label>Comments/Remarks</label>
</RecordType>